<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_email"
        android:textSize="15sp"
        android:padding="10dp"/>


    <EditText
        android:id="@+id/et_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/textView_email"
        android:layout_alignEnd="@id/textView_email"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="-180dp"
        android:hint="@string/email_hint"
        android:padding="10dp"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/textView_email"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="70dp"
        android:padding="10dp"
        android:text="@string/tv_date_of_birth"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/textView_date"
        android:layout_alignEnd="@id/textView_date"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="-180dp"
        android:hint="@string/date_of_birth_hint"
        android:padding="10dp"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/textView_date"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="70dp"
        android:padding="10dp"
        android:text="@string/tv_gender"
        android:textSize="15sp" />
    <EditText
        android:id="@+id/et_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/textView_gender"
        android:layout_alignEnd="@id/textView_gender"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="-180dp"
        android:hint="@string/gender_hint"
        android:padding="10dp"
        android:textSize="15sp" />
    <TextView
        android:id="@+id/textView_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/textView_gender"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="70dp"
        android:padding="10dp"
        android:text="@string/tv_city"
        android:textSize="15sp" />
    <EditText
        android:id="@+id/et_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/textView_city"
        android:layout_alignEnd="@id/textView_city"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="-180dp"
        android:hint="@string/city_hint"
        android:padding="10dp"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_ok_contact_info_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/textView_city"
        android:layout_alignParentStart="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="100dp"
        android:text="@string/btn_ok" />
    <Button
        android:id="@+id/btn_cancel_contact_info_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/textView_city"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="55dp"
        android:layout_marginTop="100dp"
        android:text="@string/btn_back"
        />


</RelativeLayout>