<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/button_show_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/button_edit_info"
        android:layout_alignTop="@id/button_edit_info"
        android:layout_marginStart="-130dp"
        android:layout_marginTop="0dp"
        android:text="@string/btn_show_info" />

    <Button
        android:id="@+id/button_edit_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/tv_choose"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/btn_edit_info" />

    <Button
        android:id="@+id/button_back_contact_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancel"
        android:layout_alignStart="@id/button_edit_info"
        android:layout_alignTop="@id/button_edit_info"
        android:layout_marginTop="0dp"
        android:layout_marginStart="130dp"/>

    <TextView
        android:id="@+id/tv_choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="220dp"
        android:text="@string/choose"
        android:textSize="23sp"/>

    <Button
        android:id="@+id/button_get_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Get All" />

</RelativeLayout>