<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/linear_layout_1"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:padding="10px">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10px"
            android:text="@string/field_name" />

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:id="@+id/edit_name"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/linear_layout_1"
        android:layout_alignTop="@+id/linear_layout_1"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        android:padding="10px">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/field_phone" />

        <EditText
            android:id="@+id/edit_phone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/linear_layout_2"
        android:layout_alignTop="@+id/linear_layout_2"
        android:layout_marginTop="175dp"
        android:orientation="horizontal"
        android:padding="10px">

        <Button
            android:id="@+id/button_ok_add_contact"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_ok" />

        <Button
            android:id="@+id/button_cancel_add_contact"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_cancel" />
    </LinearLayout>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignStart="@id/linear_layout_2"
        android:layout_alignTop="@id/linear_layout_2"
        android:layout_marginStart="10dp"
        android:layout_marginTop="62dp"
        android:padding="10dp" />


</RelativeLayout>